// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Mux Pipeline E2E (host ffmpeg) > audio-only → AAC MP4 1`] = `
{
  "duration": "4.010000",
  "sha256": "b0d01224d6d2badd0d60ebf6e09bba4047e4632f8ef165f8fdd98c397a83cd3c",
  "sizeBytes": 100152,
  "streams": [
    {
      "channels": 2,
      "codec_name": "aac",
      "codec_type": "audio",
      "nb_frames": "189",
      "sample_rate": "48000",
    },
  ],
}
`;

exports[`Mux Pipeline E2E (host ffmpeg) > concat 2 muxed v+a segments → MP4 1`] = `
{
  "duration": "6.073000",
  "sha256": "8ba9b7c119e9b1951d22f299f0a961e4d3e0690e40672ade079b0dc52c612c30",
  "sizeBytes": 461795,
  "streams": [
    {
      "codec_name": "h264",
      "codec_type": "video",
      "height": 480,
      "nb_frames": "363",
      "width": 848,
    },
    {
      "channels": 2,
      "codec_name": "aac",
      "codec_type": "audio",
      "nb_frames": "260",
      "sample_rate": "44100",
    },
  ],
}
`;

exports[`Mux Pipeline E2E (host ffmpeg) > muxed-with-data-stream → MP4, no data streams (#509) 1`] = `
{
  "duration": "4.224000",
  "sha256": "f809c45e917cecb25ae0e80fabde8b9700d76a076e469f71bc97ee3f93fac13f",
  "sizeBytes": 55578,
  "streams": [
    {
      "codec_name": "h264",
      "codec_type": "video",
      "height": 100,
      "nb_frames": "96",
      "width": 224,
    },
    {
      "channels": 2,
      "codec_name": "aac",
      "codec_type": "audio",
      "nb_frames": "190",
      "sample_rate": "48000",
    },
    {
      "channels": 1,
      "codec_name": "aac",
      "codec_type": "audio",
      "nb_frames": "33",
      "sample_rate": "8000",
    },
  ],
}
`;

exports[`Mux Pipeline E2E (host ffmpeg) > separate video + audio → MP4 1`] = `
{
  "duration": "3.000000",
  "sha256": "43908043998c630c193baf401cc49c59813a017d9d275ca3498215847e8951c6",
  "sizeBytes": 84241,
  "streams": [
    {
      "codec_name": "h264",
      "codec_type": "video",
      "height": 184,
      "nb_frames": "90",
      "width": 320,
    },
    {
      "channels": 2,
      "codec_name": "aac",
      "codec_type": "audio",
      "nb_frames": "140",
      "sample_rate": "48000",
    },
  ],
}
`;

exports[`Mux Pipeline E2E (host ffmpeg) > video + subtitles → MKV 1`] = `
{
  "duration": "3.000000",
  "sizeBytes": 56242,
  "streams": [
    {
      "codec_name": "h264",
      "codec_type": "video",
      "height": 184,
      "width": 320,
    },
    {
      "codec_name": "webvtt",
      "codec_type": "subtitle",
    },
  ],
}
`;
